--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^5.2.0",
     "react-highcharts": "^16.1.0",
     "react-perfect-scrollbar": "^1.5.0",
+    "react-recaptcha-google": "^1.1.1",
     "recharts": "^1.8.0",
     "store": "^2.0.0"
   },
